--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,17 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
     <div class="footer-col-wrapper">
+
       <div class="footer-col  footer-col-1">
+        <p class="text">{{ site.description }}</p>
+      </div>
+      <div class="footer-col  footer-col-2">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+
         </ul>
       </div>
-
-      <div class="footer-col  footer-col-2">
+      <div class="footer-col  footer-col-3">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -42,11 +42,12 @@
             </a>
           </li>
           {% endif %}
-        </ul>
-      </div>
 
-      <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+
+          <li>
+              <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>
+          </li>
+        </ul>
       </div>
     </div>
 
